--- a/wwwroot/start.html
+++ b/wwwroot/start.html
@@ -11,10 +11,12 @@
     <button onclick="addSpecies()" id="addButton">Ok</button>
 
     <h3>Show all observations</h3>
-    <button>Ok</button>
+    <button onclick="getAllSpecies()">Ok</button>
 
-    <h3>All observations</h3>
+    <!--<h3>All observations</h3>-->
+    <div id="observations">
 
+    </div>
     <hr />
 
     <button onclick="recreateDatabase()" id="recreateButton">Recreate database</button>
