kan lägga till lite mer info om observationen utöver art

--- a/wwwroot/start.html
+++ b/wwwroot/start.html
@@ -7,7 +7,18 @@
 <body>
 
     <h3>Add observation</h3>
-    <input id="input" name="Species"/>
+    <label>Date</label>
+    <input id="date" name="Date" type="datetime"/>
+
+    <label>Species</label>
+    <input id="species" name="Species"/>
+
+    <label>Location</label>
+    <input id="location" name="Location"/>
+
+    <label>Notes</label>
+    <input id="notes" name="Notes"/>
+
     <button onclick="addSpecies()" id="addButton">Ok</button>
 
     <h3>Show all observations</h3>
