Skriver ut tabellen som den ska

--- a/wwwroot/start.html
+++ b/wwwroot/start.html
@@ -24,7 +24,7 @@
     <h3>Show all observations</h3>
     <button onclick="getAllSpecies()">Ok</button>
 
-    <!--<h3>All observations</h3>-->
+    <h3>All observations</h3>
     <div id="observations">
 
     </div>
