SKriver ut alla artnamn som finns dock dubbelnamn också

--- a/wwwroot/start.html
+++ b/wwwroot/start.html
@@ -22,11 +22,16 @@
     <button onclick="addSpecies()" id="addButton">Ok</button>
 
     <h3>Show all observations</h3>
-    <button onclick="getAllSpecies()">Ok</button>
+    <button onclick="getAllObservations()">Ok</button>
 
     <h3>All observations</h3>
     <div id="observations">
 
+        <h3>Species</h3>
+        <button onclick="getAllSpecies()">Ok</button>
+
+        <div id="allSpecies">
+        </div>
     </div>
     <hr />
 
